--- a/giving-charity-information-donors/donate-wisely-avoid-fraud.html
+++ b/giving-charity-information-donors/donate-wisely-avoid-fraud.html
@@ -324,11 +324,14 @@
     
     <h2 id="report">Report scams or non-compliance related to charities</h2>
     <p>If you suspect that an individual or an organization is involved in a scam, or that a charity is non-compliant, you can report it to the CRA.</p>
-    <p>How to report a scam:</p>
-    <p><a href="https://www.canada.ca/en/revenue-agency/programs/about-canada-revenue-agency-cra/suspected-tax-cheating-in-canada-overview.html">Reporting suspected tax or benefit cheating in Canada</a></p>
+	<p>How to report a scam:</p>
+    <ul class="list-unstyled">
+        <li><a href="https://www.canada.ca/en/revenue-agency/programs/about-canada-revenue-agency-cra/suspected-tax-cheating-in-canada-overview.html">Reporting suspected tax or benefit cheating in Canada</a></li>
+    </ul>
     <p>What non-compliance is and how to report it:</p>
-    <p><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html#report">Report suspected non-compliance by registered charities</a></p>
-
+    <ul class="list-unstyled">
+        <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html#report">Report suspected non-compliance by registered charities</a></li>
+    </ul>
 </div>
 <div class="mwsbodytext text parbase section">
     
