--- a/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html
+++ b/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html
@@ -396,7 +396,7 @@ if(typeof hTags != 'undefined' && hTags != null){
 
 
 
-<h2><strong>Registered charities</strong></h2>
+<h2>Registered charities</h2>
 <p>Registered charities are charitable organizations, public foundations, or private foundations that are created and resident in Canada. They must use their resources for <a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply/describing-your-activities.html">charitable activities</a> and have <a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/charitable-purposes.html">charitable purposes</a> that fall into one or more of the following categories:</p>
 <ul>
 <li>the relief of poverty</li>
@@ -481,7 +481,7 @@ if(typeof hTags != 'undefined' && hTags != null){
 
 
 
-<h2><strong>Non-profit organizations</strong></h2>
+<h2>Non-profit organizations</h2>
 <p>Non-profit organizations are associations, clubs, or societies that are not charities and are organized and operated exclusively for social welfare, civic improvement, pleasure, recreation, or any other purpose except profit.</p>
 
 
@@ -566,10 +566,11 @@ if(typeof hTags != 'undefined' && hTags != null){
 
 </div>
 <div class="mwsbodytext text parbase section">
-
+<h2>Differences between a registered charity and a non-profit organization</h2>
+	
 <div class="table-responsive">
 <table class="table table-bordered table-striped">
-    <caption>Differences between a registered charity and a non-profit organization</caption>
+    <caption></caption>
     <thead>
         <tr>
             <th scope="col" class="text-center">Topic</th>
