--- a/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html
+++ b/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html
@@ -451,7 +451,7 @@ if(typeof hTags != 'undefined' && hTags != null){
 
 
 
-<section class="panel panel-primary">
+<section class="panel panel-default">
 <header class="panel-heading">
     <h2 class="panel-title">Note</h2>
 </header>
@@ -529,7 +529,7 @@ if(typeof hTags != 'undefined' && hTags != null){
 
 
 
-<section class="panel panel-primary">
+<section class="panel panel-default">
 <header class="panel-heading">
     <h2 class="panel-title">Note</h2>
 </header>
