--- a/giving-charity-information-donors/donate-wisely-avoid-fraud.html
+++ b/giving-charity-information-donors/donate-wisely-avoid-fraud.html
@@ -268,9 +268,9 @@
 <div class="mwsbodytext text parbase section">
     <h2 class="h3">On this page</h2>
     <ul>
-      <li><a href="warn">Warning signs of fraud</a></li>
-      <li><a href="tips">Tips for donating wisely </a></li>  
-      <li><a href="report">Report scams oru non-compliance related to charities</a></li>
+      <li><a href="#warn">Warning signs of fraud</a></li>
+      <li><a href="#tips">Tips for donating wisely </a></li>  
+      <li><a href="#report">Report scams oru non-compliance related to charities</a></li>
     </ul>
 </div>
 <div class="mwsbodytext text parbase section">
