--- a/policies-guidance.html
+++ b/policies-guidance.html
@@ -271,7 +271,7 @@
         <main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement" class="container">
             <div class="container">
                 <div class="row">
-                    <div><h1 id="wb-cont">Charities policies and guidance</h1>
+                    <div class="col-md-9"><h1 id="wb-cont">Charities policies and guidance</h1>
                         <p>The policies and guidance in this section explain the requirements of the Income Tax Act and the common law that applies to registered charities.</p>
                         <p>If you have a question about a policy or a guidance product, please <a href="https://cra-design.github.io/charities/contact-charities-directorate.html">contact the Charities Directorate</a>.</p>
 
