--- a/about-registered-charities/what-role-does-federal-government-play-regulation-charities.html
+++ b/about-registered-charities/what-role-does-federal-government-play-regulation-charities.html
@@ -282,7 +282,8 @@
     
 
     
-        <p>At the federal level, the Canada Revenue Agency (CRA) is responsible for <a href="https://cra-design.github.io/charities/about-charities-directorate/who-we.html">all program activities</a> related to the provisions of the <a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-153.html">Income Tax Act</a> for qualified donees. This includes:</p>  
+        <p>At the federal level, the Canada Revenue Agency (CRA) is responsible for <a href="https://cra-design.github.io/charities/about-charities-directorate/who-we.html">all program activities</a> related to the provisions of the <a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-153.html">Income Tax Act</a> for qualified donees.</p>  
+	<p>This includes:</p>
         <ul>
             <li>registered charities</li>
             <li>registered Canadian amateur athletic associations (RCAAA)</li>
