--- a/giving-charity-information-donors.html
+++ b/giving-charity-information-donors.html
@@ -335,8 +335,7 @@
                     href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-34900-donations-gifts.html">Line
                     34900 – Donations and gifts</a>
             </h3>
-            <p>Find out what to report on your income tax and benefit return and how to claim non-refundable tax
-                credits.</p>
+            <p>What to report on your income tax and benefit return, claim non-refundable tax credits.</p>
         </section>
     </div>
 
