--- a/about-registered-charities.html
+++ b/about-registered-charities.html
@@ -297,7 +297,7 @@
                             </div>
                             <div class="col-lg-4 col-md-6">
                                 <h3><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity/deciding/advantages-obligations-becoming-registered-charity.html">Obligations of a registered charity</a></h3>
-                                <p>Donating to charities and other organizations, avoiding fraud or donation tax shelter schemes.</p>
+                                <p>Explore the advantages and obligations of being a registered charity.</p>
                             </div>
                          </div>
                     </section>
