--- a/charities-and-giving.html
+++ b/charities-and-giving.html
@@ -524,7 +524,19 @@ background-color: #26384a !important
                 </div>
 
              </div>
-        <h2>Maintain an existing charity or other qualified donee</h2>
+        <h2>Register a new charity or other qualified donee</h2>
+            <div class="wb-eqht row">
+                <div class="col-lg-4 col-md-6">
+                    <h3><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status.html">Apply to become a registered charity or other qualified donee status</a></h3>
+                    <p>Apply to register or re-register, how to send an objection or appeal.</p>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <h3><a href="https://cra-design.github.io/charities/about-registered-charities.html">About registered charities</a></h3>
+                    <p>Regulating charities, obligations of a charity, differences between charities and non-profit organizations.</p>
+                </div>
+            </div>
+	<h2>Maintain an existing charity or other qualified donee</h2>
             <div class="wb-eqht row">
                 <div class="col-lg-4 col-md-6">
                     <h3><a href="https://cra-design.github.io/charities/operating-a-registered-charity.html">Operating a registered charity</a></h3>
@@ -545,25 +557,13 @@ background-color: #26384a !important
 
                 <div class="col-lg-4 col-md-6">
                     <h3><a href="https://cra-design.github.io/charities/guidance-videos-forms.html">Guidance, videos, forms and more</a></h3>
-                    <p>Guidance products and policies, videos, forms,&nbsp;checklists and Charities information sessions.</p>
+                    <p>Guidance products and policies, videos, forms,&nbsp;checklists and charities information sessions.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h3><a href="https://cra-design.github.io/charities/charity-news-contact-us.html">Charity news and contact us</a></h3>
                     <p>Recent news and updates.</p>
                 </div>
              </div>
-        <h2>Register a new charity or other qualified donee</h2>
-            <div class="wb-eqht row">
-                <div class="col-lg-4 col-md-6">
-                    <h3><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status.html">Apply to become a registered charity or other qualified donee status</a></h3>
-                    <p>Apply to register or re-register, how to send an objection or appeal.</p>
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <h3><a href="https://cra-design.github.io/charities/about-registered-charities.html">About registered charities</a></h3>
-                    <p>Regulating charities,obligations of a charity, differences between charities and non-profit organizations.</p>
-                </div>
-            </div>
         </section>
     </div>
 </div>
