--- a/about-registered-charities/what-role-does-federal-government-play-regulation-charities.html
+++ b/about-registered-charities/what-role-does-federal-government-play-regulation-charities.html
@@ -297,7 +297,7 @@
             <li>processing <a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status/apply-become-registered-charity.html">applications for registration</a></li> 
             <li>offering technical advice on <a href="https://cra-design.github.io/charities/operating-a-registered-charity.html">operating a charity</a></li> 
             <li>handling <a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions.html">audit and compliance activities</a></li> 
-            <li>providing general information to the public.</li> 
+            <li>providing general information to the public</li> 
         </ul>  
         <p>Registration provides charities with an exemption from income tax. Registration also authorizes charities to issue official donation receipts for income tax purposes, meaning that donors can claim gifts made to registered charities to reduce their income tax.</p>  
         <p>To maintain these privileges, charities must continue to meet all the requirements of the Income Tax Act.</p>
