--- a/giving-charity-information-donors/making-a-donation.html
+++ b/giving-charity-information-donors/making-a-donation.html
@@ -269,6 +269,7 @@
             <h2 class="h3">On this page</h2>
             <ul>
             <li><a href="#before">Before you donate</a></li>
+            <li><a href="#donate">How to donate</a></li>
             <li><a href="#after">After you donate</a></li> 
             <li><a href="#contact">Contact us</a></li>  
             </ul>
@@ -278,7 +279,7 @@
 
     
         <h2 id="before">Before you donate</h2>
-        <h3>Choose a cause</h3>
+        <h3>Choose a registered organization</h3>
         <p>While most charities operate with integrity, there are fraudulent organizations that take advantage of donors.</p>
         <p>Protect yourself by researching the charity you want to support before you donate:</p>
         <ul>
@@ -295,6 +296,10 @@
         <p>Remember that without a valid receipt, you won’t be able to claim a charitable tax credit or deduction.</p>
         <p>A registered charity can only issue an official donation receipt to the name of the individual or organization that made the gift.</p>
         <p>For more information: <a href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/when-should-a-charity-issue-a-receipt.html">When should a charity issue a receipt?</a></p>
+
+        <h2 id="donate">How to donate</h2>
+        <p>Registered charities have different ways of receiving donations. If you need help, contact the charity you are donating to and ask what your options are.</p>
+
 
         <h2 id="after">After you donate</h2>
         <h3>Review your official donation receipts</h3>
