--- a/giving-charity-information-donors.html
+++ b/giving-charity-information-donors.html
@@ -295,6 +295,16 @@
         <section class="gc-drmt">
             <h3 data-emptyText="Enter heading" class="h5">
                 <a
+                    href="https://cra-design.github.io/charities/giving-charity-information-donors/make-a-donation.html">Making a donation</a>
+            </h3>
+            <p>How to donate, what to do before you donate, claim a donation tax credit, eligible gifts.</p>
+        </section>
+    </div>
+    <div class="col-md-4">
+
+        <section class="gc-drmt">
+            <h3 data-emptyText="Enter heading" class="h5">
+                <a
                     href="https://cra-design.github.io/charities/giving-charity-information-donors/donate-wisely-avoid-fraud.html">Avoid fraud and donate wisely</a>
             </h3>
             <p>Warning signs of charity-related fraud,  donating wisely, how to report non-compliance.</p>
@@ -328,7 +338,7 @@
             <p>How to avoid donation schemes.</p>
         </section>
     </div>
-    <div class="col-md-4">
+    <!-- <div class="col-md-4">
         <section class="gc-drmt">
             <h3 data-emptyText="Enter heading" class="h5">
                 <a
@@ -337,7 +347,7 @@
             </h3>
             <p>What to report on your income tax and benefit return, claim non-refundable tax credits.</p>
         </section>
-    </div>
+    </div> -->
 
 </div>
 
