--- a/taxes.html
+++ b/taxes.html
@@ -343,7 +343,7 @@
           <p>When and how to register for a business number, CRA program accounts, and other government programs</p>
         </div>
         <div class="col-lg-4 col-md-6">
-          <h3><a href="https://www.canada.ca/en/services/taxes/charities.html">Charities and giving</a></h3>
+          <h3><a href="https://cra-design.github.io/charities/charities-and-giving.html">Charities and giving</a></h3>
           <p>How to register and run a charity, charities listings, and charitable tax credits</p>
         </div>
         <div class="col-lg-4 col-md-6">
