--- a/giving-charity-information-donors/donate-wisely-avoid-fraud.html
+++ b/giving-charity-information-donors/donate-wisely-avoid-fraud.html
@@ -7,7 +7,7 @@
     
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta charset="utf-8"/>
-<title>How can I donate wisely and avoid fraud? - Canada.ca</title>
+<title>Avoid fraud and donate wisely - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
 
 
