--- a/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html
+++ b/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html
@@ -7,7 +7,7 @@
     
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta charset="utf-8"/>
-<title>What is the difference between a registered charity and a non-profit organization? - Canada.ca</title>
+<title>Differences between a registered charity and a non-profit organization - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
 
 
@@ -27,7 +27,7 @@
 		<meta name="author" content="Canada Revenue Agency"/>
 	
 	
-		<meta name="dcterms.title" content="What is the difference between a registered charity and a non-profit organization?"/>
+		<meta name="dcterms.title" content="Differences between a registered charity and a non-profit organization"/>
 	
 	
 		<meta name="dcterms.description" content="Information about the difference between registered charities and non-profit organizations."/>
