--- a/giving-charity-information-donors/making-a-donation.html
+++ b/giving-charity-information-donors/making-a-donation.html
@@ -319,21 +319,10 @@
         <p>Generally, you can claim part or all of the <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-34900-donations-gifts/what-eligible-amount-gift.html">eligible amount of your gifts</a>, up to 75% of your net income for the year. </p>
         <p>To claim your charitable tax credit:</p>
         <ol class="lst-stps">
-            <li>Complete <a href="">Schedule 9</li>
+            <li>Complete <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-34900-donations-gifts/completing-your-schedule-9.html">Schedule 9</li>
             <li>Use the amounts from Schedule 9 to make a claim on <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-34900-donations-gifts.html">Line 34900 - Donations and gifts</a> of your tax and benefit return</li>
           </ol>
         
-       
-      <!-- <p>In Schedule 9, Donations and gifts:</p>
-      <ul>
-        <li>Ensure these donations <strong>have not been claimed before</strong> on a previous tax return.</li>
-      </ul>
-        <p>To do so, complete <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-34900-donations-gifts.html">Line 34900 – Donations and gifts</a> of your income tax and benefit return and complete your <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-34900-donations-gifts/completing-your-schedule-9.html">Schedule 9</a>:</p>
-        <ul >
-            <li>In Schedule 9, Donations and gifts, add up the eligible amount of all donations made by you or your spouse or common-law partner made <strong>in the current tax year</strong> or within the last <strong>5 years</strong>(or <strong>10 years</strong> for ecological gifts made after February 10, 2014)</li>
-            <li>Ensure these donations <strong>have not been claimed before</strong> on a previous tax return.</li>
-            <li>After calculating the amount on <strong>line 23</strong> of <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-s9.html">Schedule 9, Donations and Gifts</a>, enter that amount on line 34900 of your return. </li>
-        </ul> -->
 
         <h3>How to carry forward unclaimed donations</h3>
         <p>If it’s more beneficial, you can carry forward unclaimed donations to a future tax year instead of claiming them for the current year. However:</p>
