--- a/giving-charity-information-donors/making-a-donation.html
+++ b/giving-charity-information-donors/making-a-donation.html
@@ -319,8 +319,8 @@
         <p>Generally, you can claim part or all of the <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-34900-donations-gifts/what-eligible-amount-gift.html">eligible amount of your gifts</a>, up to 75% of your net income for the year. </p>
         <p>To claim your charitable tax credit:</p>
         <ol class="lst-stps">
-            <li>Complete <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-34900-donations-gifts/completing-your-schedule-9.html">Schedule 9</li>
-            <li>Use the amounts from Schedule 9 to make a claim on <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-34900-donations-gifts.html">Line 34900 - Donations and gifts</a> of your tax and benefit return</li>
+            <li>Complete <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-34900-donations-gifts/completing-your-schedule-9.html">Schedule 9</a></li>
+            <li>Use the amounts from Schedule 9 to make a claim on <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-34900-donations-gifts.html">Line 34900 - Donations and gifts</a> of your tax and benefit return</a></li>
           </ol>
         
 
