--- a/charities-and-giving.html
+++ b/charities-and-giving.html
@@ -427,7 +427,7 @@ background-color: #26384a !important
 	
 		<nav id="wb-bc" property="breadcrumb"><h2 class="wb-inv">You are here:</h2><div class="container"><ol class="breadcrumb">
 <li><a href='/en.html'>Canada.ca</a></li>
-<li><a href='/en/services/taxes.html'>Taxes</a></li>
+<li><a href='/charities/taxes.html'>Taxes</a></li>
 </ol></div></nav>
          
       </header>
