--- a/compliance-audits/we-promote-compliance.html
+++ b/compliance-audits/we-promote-compliance.html
@@ -243,8 +243,8 @@ This page describes the audit process for charities, including how a charity is 
 	
 		<nav id="wb-bc" property="breadcrumb"><h2 class="wb-inv">You are here:</h2><div class="container"><ol class="breadcrumb">
 <li><a href='/en.html'>Canada.ca</a></li>
-<li><a href='/en/services/taxes.html'>Taxes</a></li>
-<li><a href='/en/services/taxes/charities.html'>Charities and giving</a></li>
+<li><a href='/charities/taxes.html'>Taxes</a></li>
+<li><a href='/charities/charities-and-giving.html'>Charities and giving</a></li>
 <li><a href='/en/revenue-agency/services/charities-giving/charities/compliance-audits.html'>Compliance and audits</a></li>
 </ol></div></nav>
 
