--- a/giving-charity-information-donors/donation-tax-shelter-schemes.html
+++ b/giving-charity-information-donors/donation-tax-shelter-schemes.html
@@ -239,9 +239,9 @@
 	
 		<nav id="wb-bc" property="breadcrumb"><h2 class="wb-inv">You are here:</h2><div class="container"><ol class="breadcrumb">
 <li><a href='/en.html'>Canada.ca</a></li>
-<li><a href='/en/services/taxes.html'>Taxes</a></li>
-<li><a href='/en/services/taxes/charities.html'>Charities and giving</a></li>
-<li><a href='/en/revenue-agency/services/charities-giving/giving-charity-information-donors.html'>Giving to charity</a></li>
+<li><a href='/charities/taxes.html'>Taxes</a></li>
+<li><a href='/charities/charities-and-giving.html'>Charities and giving</a></li>
+<li><a href='/charities/giving-charity-information-donors.html'>Giving to charity</a></li>
 </ol></div></nav>
 
 
