--- a/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations/applying-registered-journalism-organization.html
+++ b/other-organizations-that-issue-donation-receipts-qualified-donees/registered-journalism-organizations/applying-registered-journalism-organization.html
@@ -229,8 +229,8 @@
 	
 		<nav id="wb-bc" property="breadcrumb"><h2 class="wb-inv">You are here:</h2><div class="container"><ol class="breadcrumb">
 <li><a href='/en.html'>Canada.ca</a></li>
-<li><a href='/en/services/taxes.html'>Taxes</a></li>
-<li><a href='/en/services/taxes/charities.html'>Charities and giving</a></li>
+<li><a href='/charities/taxes.html'>Taxes</a></li>
+<li><a href='/charities/charities-and-giving.html'>Charities and giving</a></li>
 <li><a href='/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status.html'>Registering for charitable or qualified donee status</a></li>
 <li><a href='/en/revenue-agency/services/charities-giving/charities/registering-charitable-qualified-donee-status/applying-other-qualified-donee-status.html'>Apply for qualified donee status</a></li>
 </ol></div></nav>
