--- a/operating-a-registered-charity/filing-t3010-charity-return/before-file.html
+++ b/operating-a-registered-charity/filing-t3010-charity-return/before-file.html
@@ -237,8 +237,8 @@
 <li><a href='https://www.canada.ca/en.html'>Canada.ca</a></li>
 <li><a href='/charities/taxes.html'>Taxes</a></li>
 <li><a href='/charities/charities-and-giving.html'>Charities and giving</a></li>
-<li><a href='/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity.html'>Operating a registered charity</a></li>
-<li><a href='/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return.html'>Filing a Registered Charity Information Return (T3010)</a></li>
+<li><a href='/charities/operating-a-registered-charity.html'>Operating a registered charity</a></li>
+<li><a href='/charities/operating-a-registered-charity/filing-t3010-charity-return.html'>Filing a Registered Charity Information Return (T3010)</a></li>
 </ol></div></nav>
 
 
@@ -585,7 +585,7 @@
 		<li><a href="https://www.canada.ca/en/services/business.html">Business</a></li>
 		<li><a href="https://www.canada.ca/en/services/benefits.html">Benefits</a></li>
 		<li><a href="https://www.canada.ca/en/services/health.html">Health</a></li>
-		<li><a href="https://www.canada.ca/en/services/taxes.html">Taxes</a></li>
+		<li><a href="https://cra-design.github.io/charities/taxes.html">Taxes</a></li>
 		<li><a href="https://www.canada.ca/en/services/environment.html">Environment and natural resources</a></li>
 		<li><a href="https://www.canada.ca/en/services/defence.html">National security and defence</a></li>
 		<li><a href="https://www.canada.ca/en/services/culture.html">Culture, history and sport</a></li>
