--- a/operating-a-registered-charity/receiving-gifts/anti-avoidance-rules-designated-gifts.html
+++ b/operating-a-registered-charity/receiving-gifts/anti-avoidance-rules-designated-gifts.html
@@ -241,8 +241,8 @@
 <li><a href='https://www.canada.ca/en.html'>Canada.ca</a></li>
 <li><a href='/charities/taxes.html'>Taxes</a></li>
 <li><a href='/charities/charities-and-giving.html'>Charities and giving</a></li>
-<li><a href='/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity.html'>Operating a registered charity</a></li>
-<li><a href='/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/receiving-gifts.html'>Receiving gifts</a></li>
+<li><a href='/charities/operating-a-registered-charity.html'>Operating a registered charity</a></li>
+<li><a href='/charities/operating-a-registered-charity/receiving-gifts.html'>Receiving gifts</a></li>
 </ol></div></nav>
 
 
@@ -509,7 +509,7 @@ Anti-avoidance rules and designated gifts</h1>
 		<li><a href="https://www.canada.ca/en/services/business.html">Business</a></li>
 		<li><a href="https://www.canada.ca/en/services/benefits.html">Benefits</a></li>
 		<li><a href="https://www.canada.ca/en/services/health.html">Health</a></li>
-		<li><a href="https://www.canada.ca/en/services/taxes.html">Taxes</a></li>
+		<li><a href="https://cra-design.github.io/charities/taxes.html">Taxes</a></li>
 		<li><a href="https://www.canada.ca/en/services/environment.html">Environment and natural resources</a></li>
 		<li><a href="https://www.canada.ca/en/services/defence.html">National security and defence</a></li>
 		<li><a href="https://www.canada.ca/en/services/culture.html">Culture, history and sport</a></li>
