--- a/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-alberta.html
+++ b/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-municipalities-alberta.html
@@ -241,8 +241,8 @@
 <li><a href='https://www.canada.ca/en.html'>Canada.ca</a></li>
 <li><a href='/charities/taxes.html'>Taxes</a></li>
 <li><a href='/charities/charities-and-giving.html'>Charities and giving</a></li>
-<li><a href='/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees.html'>Other organizations that can issue donation receipts (qualified donees)</a></li>
-<li><a href='/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings.html'>Other qualified donees listings</a></li>
+<li><a href='/charities/other-organizations-that-issue-donation-receipts-qualified-donees.html'>Other organizations that can issue donation receipts (qualified donees)</a></li>
+<li><a href='/charities/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings.html'>Other qualified donees listings</a></li>
 </ol></div></nav>
 
 
@@ -2241,7 +2241,7 @@ List of municipalities - Alberta</h1>
 		<li><a href="https://www.canada.ca/en/services/business.html">Business</a></li>
 		<li><a href="https://www.canada.ca/en/services/benefits.html">Benefits</a></li>
 		<li><a href="https://www.canada.ca/en/services/health.html">Health</a></li>
-		<li><a href="https://www.canada.ca/en/services/taxes.html">Taxes</a></li>
+		<li><a href="https://cra-design.github.io/charities/taxes.html">Taxes</a></li>
 		<li><a href="https://www.canada.ca/en/services/environment.html">Environment and natural resources</a></li>
 		<li><a href="https://www.canada.ca/en/services/defence.html">National security and defence</a></li>
 		<li><a href="https://www.canada.ca/en/services/culture.html">Culture, history and sport</a></li>
