--- a/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html
+++ b/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html
@@ -569,13 +569,13 @@ if(typeof hTags != 'undefined' && hTags != null){
 <h2>Differences between a registered charity and a non-profit organization</h2>
 	
 <div class="table-responsive">
-<table class="table table-bordered table-striped">
+<table class="provisional gc-table table" id="regvsnpo-table">
     <caption></caption>
     <thead>
         <tr>
-            <th scope="col" class="text-center">Topic</th>
-            <th scope="col" class="text-center">Registered charity</th>
-            <th scope="col" class="text-center">NPO</th>
+            <th>Topic</th>
+            <th>Registered charity</th>
+            <th>NPO</th>
         </tr>
     </thead>
     <tbody>
