--- a/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html
+++ b/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html
@@ -583,11 +583,14 @@ if(typeof hTags != 'undefined' && hTags != null){
             <td data-label="Topic">Purposes</td>
             <td data-label="Registered charity" >Must be established and operate exclusively for charitable purposes</td>
             <td data-label="NPO">
-                <ul class="list-unstyled">
+		<p>Can operate for social welfare, civic improvement, pleasure, sport, recreation, or any other purpose except profit</p>
+		<br>
+		<p>Cannot operate exclusively for charitable purposes</p>
+               <!-- <ul class="list-unstyled">
                 <li>Can operate for social welfare, civic improvement, pleasure, sport, recreation, or any other purpose except profit</li>
                 <br>
                 <li>Cannot operate exclusively for charitable purposes</li> 
-                </ul>           
+                </ul>  -->
             </td>
         </tr>
         <tr>
