--- a/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html
+++ b/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html
@@ -586,11 +586,6 @@ if(typeof hTags != 'undefined' && hTags != null){
 		<p>Can operate for social welfare, civic improvement, pleasure, sport, recreation, or any other purpose except profit</p>
 		<br>
 		<p>Cannot operate exclusively for charitable purposes</p>
-               <!-- <ul class="list-unstyled">
-                <li>Can operate for social welfare, civic improvement, pleasure, sport, recreation, or any other purpose except profit</li>
-                <br>
-                <li>Cannot operate exclusively for charitable purposes</li> 
-                </ul>  -->
             </td>
         </tr>
         <tr>
@@ -632,38 +627,32 @@ if(typeof hTags != 'undefined' && hTags != null){
             <td data-label="Topic">Tax exempt status</td>
             <td data-label="Registered charity">Is exempt from paying income tax</td>
             <td data-label="NPO" >
-                <ul class="list-unstyled">
-                    <li>Is generally exempt from paying income tax</li>
-                    <br>
-                    <li>May have to pay tax on property income or on capital gains</li> 
-                </ul>   
+		<p>Is generally exempt from paying income tax</p>
+		<br>
+		<p>May have to pay tax on property income or on capital gains</p>
             </td>
         </tr>
         <tr>
             <td data-label="Topic">GST/HST</td>
             <td data-label="Registered charity" >
-                <ul class="list-unstyled">
-                    <li>Generally must pay GST/HST on purchases</li>
-                    <br>
-                    <li>May claim a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/news114/news114-excise-gst-hst-news-no-114.html">partial rebate of GST/HST paid on eligible purchases</a></li>
-                    <br>
-                    <li>Most supplies made by charities are exempt</li>
-                    <br>
-                    <li>Calculates net tax using <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/gi-066.html">the net tax calculation for charities</a></li> 
-                </ul>  
+                <p>Generally must pay GST/HST on purchases</p>
+		<br>
+		<p>May claim a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/news114/news114-excise-gst-hst-news-no-114.html">partial rebate of GST/HST paid on eligible purchases</a></p>
+		<br>
+		<p>Most supplies made by charities are exempt</p>
+		<br>
+		<p>Calculates net tax using <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/gi-066.html">the net tax calculation for charities</a></p>
             </td>
             <td data-label="NPO" >
-                <ul class="list-unstyled">
-                    <li>Must pay GST/HST on purchases</li>
-                    <br>
-                    <li>May claim a partial rebate of GST/HST paid on eligible purchases only if it receives significant government funding</li>
-                    <br>
-                    <li>Most supplies made by charities are exempt</li>
-                    <br>
-                    <li>Few supplies made by NPOs are exempt</li>
-                    <br> 
-                    <li>Calculates <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4022/general-information-gst-hst-registrants.html#H1_112">net tax</a> the regular way</li> 
-                </ul>
+		<p>Must pay GST/HST on purchases</p>
+		<br>
+		<p>May claim a partial rebate of GST/HST paid on eligible purchases only if it receives significant government funding</p>
+		<br>
+		<p>Most supplies made by charities are exempt</p>
+		<br>
+		<p>Few supplies made by NPOs are exempt</p>
+		<br>
+		<p>Calculates <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4022/general-information-gst-hst-registrants.html#H1_112">net tax</a> the regular way</p>
             </td>
         </tr>
     </tbody>
