--- a/giving-charity-information-donors/donate-wisely-avoid-fraud.html
+++ b/giving-charity-information-donors/donate-wisely-avoid-fraud.html
@@ -339,7 +339,7 @@
     
         <h2>Related links</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/corporate/scams-fraud.html">Scam prevention and the CRA</a></li>
+<li><a href="https://www.canada.ca/en/revenue-agency/corporate/scams-fraud.html">Scams and fraud - CRA</a></li>
 <li><a href="https://www.getcybersafe.gc.ca/en/home">Stay safe online</a></li>
 <li><a href="https://cra-design.github.io/charities/information-about-a-charity.html">How to get information about a charity</a></li>
 </ul>
