--- a/charities-and-giving.html
+++ b/charities-and-giving.html
@@ -520,7 +520,7 @@ background-color: #26384a !important
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h3><a href="https://cra-design.github.io/charities/giving-charity-information-donors.html">Giving to charity</a></h3>
-                    <p>Donating to charities and other organizations, avoiding fraud or donation tax shelter schemes.</p>
+                    <p>Find charities, claim donations on taxes, avoid fraud and donation tax shelter schemes.</p>
                 </div>
 
              </div>
