updated test page with CRA homepage

--- a/charities-and-giving.html
+++ b/charities-and-giving.html
@@ -637,7 +637,7 @@ background-color: #26384a !important
 		<section class="gc-contributors col-md-8 mrgn-tp-md">
 			<h2>From:</h2>
 			<ul>
-				<li><a href="/en/revenue-agency.html">Canada Revenue Agency</a></li>
+				<li><a href="https://cra-design.github.io/charities/revenue-agency.html">Canada Revenue Agency</a></li>
 			</ul>
 		</section>
 		<section class="col-md-4 mrgn-bttm-sm mrgn-tp-md">
