--- a/compliance-audits-and-sanctions.html
+++ b/compliance-audits-and-sanctions.html
@@ -408,7 +408,7 @@ Compliance, audits and sanctions</h1>
         <ul>
             
                 <li>
-                    <a href="https://www.canada.ca/en/revenue-agency.html" title="Canada Revenue Agency ">Canada Revenue Agency </a>
+                    <a href=https://cra-design.github.io/charities/revenue-agency.html title="Canada Revenue Agency ">Canada Revenue Agency </a>
                 </li>
             
         </ul>
