--- a/operating-a-registered-charity/fundraising-activities-charities-other-qualified-donees.html
+++ b/operating-a-registered-charity/fundraising-activities-charities-other-qualified-donees.html
@@ -433,7 +433,7 @@ Fundraising activities by registered charities</h1>
         <ul>
             
                 <li>
-                    <a href="https://www.canada.ca/en/revenue-agency.html" title="Canada Revenue Agency ">Canada Revenue Agency </a>
+                    <a href=https://cra-design.github.io/charities/revenue-agency.html title="Canada Revenue Agency ">Canada Revenue Agency </a>
                 </li>
             
         </ul>
