--- a/registering-charitable-qualified-donee-status.html
+++ b/registering-charitable-qualified-donee-status.html
@@ -518,7 +518,7 @@ Registering for charitable or other qualified donee status</h1>
         <ul>
             
                 <li>
-                    <a href="https://www.canada.ca/en/revenue-agency.html" title="Canada Revenue Agency ">Canada Revenue Agency </a>
+                    <a href=https://cra-design.github.io/charities/revenue-agency.html title="Canada Revenue Agency ">Canada Revenue Agency </a>
                 </li>
             
         </ul>
