--- a/registering-charitable-qualified-donee-status/apply-become-registered-charity.html
+++ b/registering-charitable-qualified-donee-status/apply-become-registered-charity.html
@@ -461,7 +461,7 @@ Apply to become a registered charity</h1>
         <ul>
             
                 <li>
-                    <a href="https://www.canada.ca/en/revenue-agency.html" title="Canada Revenue Agency">Canada Revenue Agency<br/></a>
+                    <a href=https://cra-design.github.io/charities/revenue-agency.html title="Canada Revenue Agency">Canada Revenue Agency<br/></a>
                 </li>
             
         </ul>
