--- a/guidance-videos-forms.html
+++ b/guidance-videos-forms.html
@@ -687,7 +687,7 @@ Guidance products, videos, forms and more</h1>
         <ul>
             
                 <li>
-                    <a href="https://www.canada.ca/en/revenue-agency.html" title="Canada Revenue Agency">Canada Revenue Agency</a>
+                    <a href=https://cra-design.github.io/charities/revenue-agency.html title="Canada Revenue Agency">Canada Revenue Agency</a>
                 </li>
             
         </ul>
