--- a/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply.html
+++ b/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply.html
@@ -267,7 +267,7 @@
 
     <h1 property="name" id="wb-cont" dir="ltr">
 Apply for registration</h1>
-<p class="gc-byline"><strong>From: <a href="https://www.canada.ca/en/revenue-agency.html">Canada Revenue Agency</a></strong></p>
+<p class="gc-byline"><strong>From: <a href=https://cra-design.github.io/charities/revenue-agency.html>Canada Revenue Agency</a></strong></p>
 
 
 </div>
