--- a/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/charitable-purposes.html
+++ b/registering-charitable-qualified-donee-status/apply-become-registered-charity/establishing/charitable-purposes.html
@@ -467,7 +467,7 @@ Charitable purposes</h1>
         <ul>
             
                 <li>
-                    <a href="https://www.canada.ca/en/revenue-agency.html" title="Canada Revenue Agency ">Canada Revenue Agency </a>
+                    <a href=https://cra-design.github.io/charities/revenue-agency.html title="Canada Revenue Agency ">Canada Revenue Agency </a>
                 </li>
             
         </ul>
