--- a/revenue-agency.html
+++ b/revenue-agency.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency.html"/>
+	<link rel="canonical" href=https://cra-design.github.io/charities/revenue-agency.html/>
+    <link rel="alternate" hreflang="en" href=https://cra-design.github.io/charities/revenue-agency.html/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu.html"/>
 	
