--- a/en.html
+++ b/en.html
@@ -320,7 +320,7 @@
 				<p>EI, family and sickness leave, pensions, housing, student aid, disabilities</p>
 			</div>
 			<div class="col-lg-4 col-md-6">
-				<h3><a href="https://www.canada.ca/en/services/taxes.html">Taxes</a></h3>
+				<h3><a href="https://cra-design.github.io/charities/taxes.html">Taxes</a></h3>
 				<p>Income tax, payroll, GST/HST,  contribution limits, tax credits, charities</p>
 			</div>
 			<div class="col-lg-4 col-md-6">
