--- a/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply/create-application-checklist.html
+++ b/registering-charitable-qualified-donee-status/apply-become-registered-charity/apply/create-application-checklist.html
@@ -170,7 +170,7 @@
   <h2 class="wb-inv">You are here:</h2>
   <div class="container">
     <ol class="breadcrumb">
-      <li><a href="https://www.canada.ca/en.html">Canada.ca</a></li>
+      <li><a href="https://cra-design.github.io/charities/revenue-agency.html">Canada Revenue Agency</a></li>
       <li><a href="https://cra-design.github.io/charities/taxes.html">Taxes</a></li>
       <li><a href="/charities/charities-and-giving.html">Charities and giving</a></li>
       <li><a href="/charities/registering-charitable-qualified-donee-status.html">Registering for charitable or other qualified donee status</a></li>
