Correcting image code (closing tag)

--- a/operating-a-registered-charity/issuing-receipts/cause-related-marketing.html
+++ b/operating-a-registered-charity/issuing-receipts/cause-related-marketing.html
@@ -286,7 +286,7 @@ Cause-related marketing</h1>
     
           <p>On this webpage, receipt refers to an official donation receipt.</p>  <p>Cause-related marketing is a fundraising activity where a registered charity (or other <a href="https://cra-design.github.io/charities/charities-giving-glossary.html#qualdonee">qualified donee</a>) works with a for-profit partner to promote the sale of the for-profit partner’s items or services on the basis that part of the revenues will go to the registered charity.</p>  <p>The benefit the for-profit partner receives from this type of arrangement is considered an <a href="https://cra-design.github.io/charities/charities-giving-glossary.html#advantage">advantage</a>. For the charity to issue a receipt for a donation made as a result of cause-related marketing, it must be able to calculate the value of any advantage the donor received. The value of the advantage is generally subtracted from the amount of the donation to calculate the <a href="https://cra-design.github.io/charities/charities-giving-glossary.html#eligamt">eligible amount of the gift</a> for the receipt. See <a href="#_Other_factors_to">Other factors to keep in mind</a> for some exceptions.</p>  <p>&nbsp;</p> 
 	
-<img src="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts/cause-related-marketing.html" alt="">
+<img src="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts/cause-related-marketing.html" alt=""/>
     
 
 
