--- a/development/business-account.html
+++ b/development/business-account.html
@@ -329,7 +329,7 @@ See a list of services here: <a href="https://www.canada.ca/en/revenue-agency/se
 <h3>If your organization has a BN and RR account</h3>
 <ol>
     <li><a href="#">Sign in</a> or <a href="#">register for a CRA account</a></li>
-    <li>Select <strong>add account</strong>>, then <strong>add business number</strong></li>
+    <li>Select <strong>add account</strong>, then <strong>add business number</strong></li>
 </ol>
 <p>Once a business number is added your RR account will be attached</p>
 
