--- a/development/business-account.html
+++ b/development/business-account.html
@@ -314,10 +314,10 @@ See a list of services here: <a href="https://www.canada.ca/en/revenue-agency/se
 <ul>
     <li>registered CRA account</li>
     <li>business number (BN)</li>
-    <li>charity account (RR)</li>
+    <li>charity program account (RR)</li>
 </ul>
 
-<p>If your organization is one of the following, then you already have a BN and RR charity account:</p>
+<p>If your organization is one of the following, then you already have a BN and RR charity program account:</p>
 <ul>
     <li>registered charity</li>
     <li>registered Canadian amateur athletic association</li>
@@ -334,7 +334,7 @@ See a list of services here: <a href="https://www.canada.ca/en/revenue-agency/se
 <p>Once a business number is added your RR account will be attached</p>
 
 <h3>If you aren't sure if your organization has a BN and RR account</h3>
-<p>Many organizations applying to become a registered charity already possess a BN or charity account, or both. Do <strong>not</strong> request a new BN or RR charity account if you already have them.</p>
+<p>Many organizations applying to become a registered charity already possess a BN or charity program account, or both. Do <strong>not</strong> request a new BN or RR charity program account if you already have them.</p>
 <details>
     <summary>If you are part of an organization with a head body</summary>
     <p>please reach out to your internal contacts to find out if you have a BN or RR.</p>
@@ -357,11 +357,11 @@ See a list of services here: <a href="https://www.canada.ca/en/revenue-agency/se
 
 
 <h2 id="h-3">Register for a CRA account</h2> 
-<p>Your CRA account will be the way you can access information and services for your charities. Adding your business number and charity account to your CRA account will add the related services.</p>
+<p>Your CRA account will be the way you can access information and services for your charities. Adding your business number and charity program account to your CRA account will add the related services.</p>
 
 <ol class="lst-stps">
     <li>Start with registering your CRA account: <a href="#">Register for a CRA account</a></li>
-    <li> Once a CRA account is registered, sign-in and follow the steps on <a href="#">Register with BRO</a> to register your business number and charity account
+    <li> Once a CRA account is registered, sign-in and follow the steps on <a href="#">Register with BRO</a> to register your business number and charity program account
         <li>To avoid issues(specify what issues), please ensure you do not already have a BN or RR account </li>
     </li>
     <li>Once registraion is complete you can sign-in and view your online services</li>
@@ -378,7 +378,7 @@ See a list of services here: <a href="https://www.canada.ca/en/revenue-agency/se
 
 
 <ol class="lst-stps stps-strpd">
-<li><h3 id="step-1">Does your organization already have a business number&nbsp;and a charity account with the <abbr title="Canada Revenue Agency">CRA</abbr>?</h3>
+<li><h3 id="step-1">Does your organization already have a business number&nbsp;and a charity program account with the <abbr title="Canada Revenue Agency">CRA</abbr>?</h3>
 <p>Many organizations applying for charitable registration already have a <abbr title="business number">BN</abbr> and an associated RR account with the <abbr title="Canada Revenue Agency">CRA</abbr>.</p>
 <p>Consider the following before requesting a new <abbr title="business number">BN</abbr> and RR account:</p>
 <ul class="list-unstyled">
@@ -401,7 +401,7 @@ See a list of services here: <a href="https://www.canada.ca/en/revenue-agency/se
 </ul>
 <p class="mrgn-tp-md">If you answer <strong>no</strong> to all the questions above, proceed to the next step.</p>
 </li>
-<li><h3 id="step-2">Get your business number and charity account</h3>
+<li><h3 id="step-2">Get your business number and charity program account</h3>
 <p>Business Registration Online is a one-stop, online, self-serve application that lets you register for the following:</p>
 <ul>
 <li>a <abbr title="business number">BN</abbr> (example: 123456789)</li>
@@ -505,7 +505,7 @@ See a list of services here: <a href="https://www.canada.ca/en/revenue-agency/se
 <section class="alert alert-danger"><h3>Important: Are you trying to access <abbr title="My Business Account">MyBA</abbr> for a registered charity that is an internal division?</h3>
 <ol>
 <li>Contact your head body to confirm that it has a <abbr title="business number">BN</abbr> and an associated RR account for your internal division.<ul>
-<li>If your head body doesn’t have them, it can obtain them by following the instructions in <a href="#step-2">step 2 – Get your business number and charity account</a>.</li>
+<li>If your head body doesn’t have them, it can obtain them by following the instructions in <a href="#step-2">step 2 – Get your business number and charity program account</a>.</li>
 </ul>
 </li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client/about-represent-a-client.html#q3">Register for Represent a client</a> to get a repID.</li>
