--- a/development/business-account-v2.html
+++ b/development/business-account-v2.html
@@ -297,11 +297,10 @@
     <ul>
       <li><a href="h-1">What you can do with a CRA account</a></li>
       <li><a href="h-2">Before you register</a>
-        <ul>
-			<li><a href="h-2-1">If your organization already has a business number and charity program account</a></li>
-        	<li><a href="h-2-2">If you aren't sure if your organization already has a business number and charity program account</a></li>
-		</ul>
+        <li><a href="h-2-1">If your organization already has a business number and charity program account</a></li>
+        <li><a href="h-2-2">If you aren't sure if your organization already has a business number and charity program account</a></li>
       </li>
+        
       <li><a href="h-3">Register for a CRA account</a></li>
       <li><a href="h-4">Register your charity</a></li>
     </ul>
@@ -331,18 +330,19 @@ See a list of services here: <a href="https://www.canada.ca/en/revenue-agency/se
     <li>registered national arts service organization</li>
 </ul>
 
-<h3 id="h-2-1">If your organization has a BN and RR account</h3>
+<h3 id="h-2-1">If your organization has a BN and RR program account</h3>
 <ol>
     <li><a href="#">Sign in</a> or <a href="#">register for a CRA account</a></li>
     <li>Select <strong>add account</strong>>, then <strong>add business number</strong></li>
 </ol>
-<p>Once a business number is added your RR account will be attached</p>
+<p>Once a business number is added your RR account will be attached automatically if it was registered</p>
 
-<h3 id="h-2-2">If you aren't sure if your organization has a BN and RR account</h3>
-<p>Many organizations applying to become a registered charity already possess a BN or charity program account, or both. Do <strong>not</strong> request a new BN or RR charity program account if you already have them.</p>
+<h3 id="h-2-2">If you aren't sure if your organization has a BN and RR program account</h3>
+<p>Many organizations applying to become a registered charity already possess a BN or RR program account, or both. Do <strong>not</strong> request a new BN or RR program account if you already have them.</p>
 <details>
     <summary>If you are part of an organization with a head body</summary>
-    <p>please reach out to your internal contacts to find out if you have a registered account, a business number and a charity program account.</p>
+    <p>please reach out to your internal contacts to find out if your organization has a registered account, a business number and an RR program account.</p>
+    <p>You may have to access this account via <a href="#">Represent a client</a>.</p>
 </details>
 
 <details>
@@ -352,7 +352,7 @@ See a list of services here: <a href="https://www.canada.ca/en/revenue-agency/se
 
 <details>
     <summary>If you have a business number and don’t know if you have an RR program account</summary>
-    <p>Please sign in and check your CRA account, or <a href="">contact us</a> to find out</p>
+    <p>Please sign in and check your CRA account, or <a href="#">contact us</a> to find out</p>
 </details>
 <!-- 
 <details>
@@ -362,17 +362,19 @@ See a list of services here: <a href="https://www.canada.ca/en/revenue-agency/se
 
 
 <h2 id="h-3">Register for a CRA account</h2> 
-<p>Your CRA account will be the way you can access information and services for your charities. Adding your business number and charity program account to your CRA account will add the related services.</p>
+<p>Your CRA account will be the way you can access and update information and services for your charities. Adding your business number and charity program account to your CRA account will add the related services.</p>
 
 
 <h2>Register or add your charity to your CRA account</h2>
 <p>Once a CRA account is registered, sign-in and follow the steps on <a href="#">Register with BRO</a> to register your business number(BN) and charity program account(RR)</p>
 <p>To avoid issues(specify what issues), please ensure you do not already have a BN or RR account</p>
-<p>If you have a BN and RR account, please see: <a href=""></a></p>
+<p>If you have a BN and RR account, please see: <a href="#h-2-1">If your organization has a BN and RR program account</a></p>
 
 
 <h2 id="h-4">Register your charity</h2> 
+<p>A business number (BN) and charity program account (RR) does not automatically make your organization a registered charity</p>
 <p>To become a registered charity, you will need to submit an application to <a href="#">register a charity under the Income Tax Act</a>.</p>
+
     
 <!-- <div class="row">
     <div class="col-md-8">
