--- a/development/business-account.html
+++ b/development/business-account.html
@@ -287,9 +287,8 @@
 <h2 class="h3">On this page</h2>
     <ul>
       <li><a href="h-1">What you can do with a CRA account</a></li>
-      <li><a href="h-2">Before you register</a></li>  
-      <li><a href="h-3">Register for a CRA account</a></li>
-      <li><a href="h-4">Register your charity</a></li>
+      <li><a href="h-2">Register for a CRA account</a></li>  
+      <li><a href="h-3">Add or register your charity on your CRA account</a></li>
     </ul>
     
 
@@ -301,40 +300,28 @@
 <p>With a CRA account you can access the following services for your charity:</p>
 <ul>
     <li>apply to become a registered charity or a registered Canadian amateur athletic association</li>
-    <li>file the T3010 annual information return and upload required documentation, such as financial statements</li>
-    <li>update your organization’s information, upload supporting documents, and communicate directly with us</li>
-</ul>
-<p>A CRA account offers additional services for both your charity and business. 
-See a list of services here: <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account/about-business-account/services-my-business-account.html">Services in My Business Account – About My Business Account - Canada.ca</a></p>
-<p></p>
-
-
-<h2 id="h-2">Before you register</h2> 
-<p>To use all of our online services your organization must have a:</p>
-<ul>
-    <li>registered CRA account</li>
-    <li>business number (BN)</li>
-    <li>charity program account (RR)</li>
+    <li>file the T3010 annual information return</li>
+    <li>update your organization’s information</li>
+    <li>communicate directly with us</li>
 </ul>
 
+
+<h2 id="h-2">Register for a CRA account</h2> 
+<p>To access our online services, you will first need to register your CRA account, then add or register your business number (BN) and charity program account (RR).</p>
+<p>If you haven’t registered for a CRA account before, refer to: <a href="#">Register for a CRA account</a></p>
+
+<h2 id="h-3">Add or register your charity on your CRA account</h2> 
+<p>Once your CRA account is registered, you may now add or register your business number and charity program account.</p>
+
+<h3>If you aren't sure if your organization has a BN and RR account</h3>
+<p>Many organizations applying to become a registered charity already possess a BN or charity program account, or both. Do <strong>not</strong> request a new BN or RR charity program account if you already have them.</p>
 <p>If your organization is one of the following, then you already have a BN and RR charity program account:</p>
 <ul>
     <li>registered charity</li>
     <li>registered Canadian amateur athletic association</li>
     <li>registered national arts service organization</li>
 </ul>
-<p>If your organization has all of the above, sign-in to view your charities services</p>
-<button class="btn btn-call-to-action">Sign-in</button>
-
-<h3>If your organization has a BN and RR account</h3>
-<ol>
-    <li><a href="#">Sign in</a> or <a href="#">register for a CRA account</a></li>
-    <li>Select <strong>add account</strong>, then <strong>add business number</strong></li>
-</ol>
-<p>Once a business number is added your RR account will be attached</p>
-
-<h3>If you aren't sure if your organization has a BN and RR account</h3>
-<p>Many organizations applying to become a registered charity already possess a BN or charity program account, or both. Do <strong>not</strong> request a new BN or RR charity program account if you already have them.</p>
+<p>Situations you may be in:</p>
 <details>
     <summary>If you are part of an organization with a head body</summary>
     <p>please reach out to your internal contacts to find out if you have a BN or RR.</p>
@@ -347,25 +334,76 @@ See a list of services here: <a href="https://www.canada.ca/en/revenue-agency/se
 
 <details>
     <summary>If you have a business number and don’t know if you have an RR program account</summary>
-    <p>Please sign in and check your CRA account, or <a href="">contact us</a> to find out</p>
+    <p>Please sign in and check your CRA account, or <a href="#">contact us</a> to find out</p>
 </details>
-<!-- 
-<details>
-    <summary></summary>
-    <p></p>
-</details> -->
 
-
-<h2 id="h-3">Register for a CRA account</h2> 
-<p>Your CRA account will be the way you can access information and services for your charities. Adding your business number and charity program account to your CRA account will add the related services.</p>
-
-<ol class="lst-stps">
-    <li>Start with registering your CRA account: <a href="#">Register for a CRA account</a></li>
-    <li> Once a CRA account is registered, sign-in and follow the steps on <a href="#">Register with BRO</a> to register your business number and charity program account
-        <li>To avoid issues(specify what issues), please ensure you do not already have a BN or RR account </li>
+<h3>How to add a BN and RR to your CRA account</h3>
+<p>If you have a registered CRA account, and both a business number and charity program account:</p>
+<ol>
+    <li>Sign-in to your CRA account</li>
+    <li>Select <strong>Add account</strong>, then <strong>Business account</strong></li>
+    <li>Select <strong>Add business number</strong>, then enter your business number
+        <ul>
+            <li>If you have an RR account registered through this business, it will be autoamtically added</li>
+        </ul>
     </li>
-    <li>Once registraion is complete you can sign-in and view your online services</li>
+</ol>
+
+<h3>How to register your charity on your CRA account</h3>
+<p>If you don't have a BN or RR account, you may register for both by following the <a href="#">Business Registration Online (BRO)</a> steps</p>
+
+
+<h2> Alternative:</h2>
+
+<ol class="lst-stps stps-strpd">
+      <li>
+    <h3>Register your CRA account</h3>
+    <p>To access our online services, you will first need to register your CRA account, then add or register your business number (BN) and charity program account (RR).</p>
+    <p>If you haven’t registered for a CRA account before, refer to: <a href="#">Register for a CRA account</a></p>
+  </li>
+      <li>
+    <h3>Register your business number (BN) and charity program account (RR)</h3>
+    <p>If you already have a BN and RR, proceed to the next step.</p>
+    <p>Do <strong>not</strong> request a new BN or RR charity program account if you already have them.</p>
+    <p>If your organization is one of the following, then you already have a BN and RR charity program account:</p>
+<ul>
+    <li>registered charity</li>
+    <li>registered Canadian amateur athletic association</li>
+    <li>registered national arts service organization</li>
+</ul>
+<p>Situations you may be in:</p>
+<details>
+    <summary>If you are part of an organization with a head body</summary>
+    <p>please reach out to your internal contacts to find out if you have a BN or RR.</p>
+</details>
+
+<details>
+    <summary>If you don't know if you have a business number</summary>
+    <p>see <a href="#">Ways to find an existing business number</a>.</p>
+</details>
+
+<details>
+    <summary>If you have a business number and don’t know if you have an RR program account</summary>
+    <p>Please sign in and check your CRA account, or <a href="#">contact us</a> to find out</p>
+</details>
+If you have located your BN and RR, then you can add them to your account:
+ 
+  </li>
+      <li>
+    <h3>Add your BN and RR to your CRA account</h3>
+    After registering for your CRA account, if you have a BN/RR account you can add it to your CRA account to unlock the related services.
+    <ol class="lst-stps-sub">
+        <li>Sign-in to your CRA account</li>
+        <li>Select <strong>Add account</strong>, then <strong>Business account</strong></li>
+        <li>Select <strong>Add business number</strong>, then enter your business number
+            <ul>
+                <li>If you have an RR account registered through this business, it will be automatically added</li>
+            </ul>
+        </li>
     </ol>
+  </li>
+    </ol>
+
 
 <h2 id="h-4">Register your charity</h2> 
 <p>To become a registered charity, you will need to submit an application to <a href="#">register a charity under the Income Tax Act</a>.</p>
