--- a/development/business-account-v2.html
+++ b/development/business-account-v2.html
@@ -286,8 +286,9 @@
 <p>Setting up a CRA account is the quickest and safest way to manage your organization's account information.</p>
 <h2 class="h3">On this page</h2>
     <ul>
-      <li><a href="h-1">What you can do with a CRA account</a></li>
-      <li><a href="h-2">Register for a CRA account</a></li>  
+      <li><a href="#h-1">What you can do with a CRA account</a></li>
+      <li><a href="#h-2">Register for a CRA account</a></li>  
+      <li><a href="#h-3">Register your charity</a></li> 
     </ul>
     
 
@@ -311,11 +312,11 @@
 <ol class="lst-stps stps-strpd">
       <li>
     <h3>Register your CRA account</h3>
-    <p>To access our online services, you will first need to register your CRA account, then add or register your business number (BN) and charity program account (RR).</p>
+    <p>To access our online services, you will first need to register your CRA account, then add or register your BN and RR.</p>
     <p>If you haven’t registered for a CRA account before, refer to: <a href="#">Register for a CRA account</a></p>
   </li>
       <li>
-    <h3>Register your business number (BN) and charity program account (RR)</h3>
+    <h3>Register your BN and RR</h3>
     <p>If you already have a BN and RR, proceed to the next step.</p>
     <p>Do <strong>not</strong> request a new BN or RR charity program account if you already have them.</p>
     <p>If your organization is one of the following, then you already have a BN and RR charity program account:</p>
@@ -327,7 +328,8 @@
 <p>Situations you may be in:</p>
 <details>
     <summary>If you are part of an organization with a head body</summary>
-    <p>please reach out to your internal contacts to find out if you have a BN or RR.</p>
+    <p>please reach out to your internal contacts to find out if you have a business number and charity program account.</p>
+    <p>You may have to sign-in as a representative, for more info refer to: <a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client/about-represent-a-client.html">Represent a client</a></p>
 </details>
 
 <details>
@@ -358,8 +360,17 @@ If you have located your BN and RR, then you can add them to your account:
     </ol>
 
 
-<h2 id="h-4">Register your charity</h2> 
-<p>To become a registered charity, you will need to submit an application to <a href="#">register a charity under the Income Tax Act</a>.</p>
+<h2 id="h-3">Register your charity</h2> 
+<p>Having a business number and a charity program account does not automatically make you a registered charity</p>
+<p>To become a registered charity, you will need to: </a>.</p>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
+      <li class="cnjnctn-col">
+        <p>Submit an application to <a href="#">register a charity under the Income Tax Act</p>
+      </li>
+      <li class="cnjnctn-col">
+        <p>Sign-in to your CRA account and click <strong>Register a charity</strong></p>
+      </li>
+</ul>
     
 
 </div>
