--- a/development/business-account-v2.html
+++ b/development/business-account-v2.html
@@ -346,7 +346,7 @@ If you have located your BN and RR, then you can add them to your account:
   </li>
       <li>
     <h3>Add your BN and RR to your CRA account</h3>
-    After registering for your CRA account, if you have a BN/RR account you can add it to your CRA account to unlock the related services.
+    After registering for your CRA account, if you have a BN and RR you can add these to your CRA account to unlock the related services.
     <ol class="lst-stps-sub">
         <li>Sign-in to your CRA account</li>
         <li>Select <strong>Add account</strong>, then <strong>Business account</strong></li>
